--- a/src/theme/blocks/_button.scss
+++ b/src/theme/blocks/_button.scss
@@ -8,6 +8,9 @@
   p + & {
     .button.container {
       margin-top: 60px;
+      @container (max-width: #{$largest-mobile-screen}) {
+        margin-top: 40px;
+      }
     }
   }
 
